Entire backend update
- Model review and updates
- Route review and updates
- Controller review and updates
- Mark implementation, csv conversion and dowloads
- index.js update
- server.js update
- dao removal
- package update
