# hms-backend/api/controllers/studentController.js
@@ -1,3 +1,4 @@
+// Importing necessary models and utilities
 import Feedback from '../models/Feedback.js';
 import Assignment from '../models/Assignment.js';
 import Submission from '../models/Submission.js';
@@ -9,17 +10,21 @@ import ffmpeg from 'fluent-ffmpeg';
 import ffmpegInstaller from '@ffmpeg-installer/ffmpeg';
 ffmpeg.setFfmpegPath(ffmpegInstaller.path);
 
+// Function to check if the user role is allowed to perform an action
 const isAllowedRole = (role) => role === USER_ROLES.ADMIN || role === USER_ROLES.STUDENT;
 
 export default {
+    // Method to get all feedbacks
     getFeedback: async (req, res) => {
         try {
+            // Check if the user role is allowed
             if (!isAllowedRole(req.user.role)) {
                 return res.status(403).json({
                     message: 'Access denied'
                 });
             }
             
+            // Retrieve all feedbacks
             const feedbacks = await Feedback.find();
             res.status(200).json(feedbacks);
         } catch (err) {
@@ -29,14 +34,17 @@ export default {
             });
         }
     },
+    // Method to get all assignments
     getAllAssignments: async (req, res) => {
         try {
+            // Check if the user role is allowed
             if (!isAllowedRole(req.user.role)) {
                 return res.status(403).json({
                     message: 'Access denied'
                 });
             }
 
+            // Retrieve all assignments
             const result = await Assignment.find().exec();
             if (result.length > 0) {
                 res.status(200).json(result);
@@ -52,14 +60,17 @@ export default {
             });
         }
     },
+    // Method to get an assignment by ID
     getAssignmentById: async (req, res) => {
         try {
+            // Check if the user role is allowed
             if (!isAllowedRole(req.user.role)) {
                 return res.status(403).json({
                     message: 'Access denied'
                 });
             }
 
+            // Retrieve an assignment by ID
             const id = req.params.assignmentId;
             const result = await Assignment.findById(id).exec();
             if (result) {
@@ -76,6 +87,7 @@ export default {
             });
         }
     },
+    // Method to submit a selected video
     postSubmitSelectedVideo: async (req, res) => {
         if (!isAllowedRole(req.user.role)) {
             return res.status(403).json({
@@ -88,8 +100,10 @@ export default {
         }
 
         try {
+            // Compress the uploaded video
             const compressedFilePath = await compressVideo(req.file.path);
             
+            // Create and save a new submission
             const submission = new Submission({
                 assignment: req.body.assignmentId,
                 student: req.body.userId || req.user._id,
@@ -106,6 +120,7 @@ export default {
             res.status(500).json({ error: error.message });
         }
     },
+    // Method to submit a recorded video
     postSubmitRecordedVideo: async (req, res) => {
         if (!isAllowedRole(req.user.role)) {
             return res.status(403).json({
@@ -118,8 +133,10 @@ export default {
         }
 
         try {
+            // Compress the uploaded video
             const compressedFilePath = await compressVideo(req.file.path);
             
+            // Create and save a new submission
             const submission = new Submission({
                 assignment: req.body.assignmentId,
                 student: req.body.userId || req.user._id,
@@ -136,14 +153,17 @@ export default {
             res.status(500).json({ error: error.message });
         }
     },
+    // Method to get all submissions
     getSubmissions: async (req, res) => {
         try {
+            // Check if the user role is allowed
             if (!isAllowedRole(req.user.role)) {
                 return res.status(403).json({
                     message: 'Access denied'
                 });
             }
 
+            // Retrieve all submissions
             const result = await Submission.find().exec();
             if (result.length > 0) {
                 res.status(200).json(result);
@@ -159,14 +179,17 @@ export default {
             });
         }
     },
+    // Method to get a submission by ID
     getSubmissionById: async (req, res) => {
         try {
+            // Check if the user role is allowed
             if (!isAllowedRole(req.user.role)) {
                 return res.status(403).json({
                     message: 'Access denied'
                 });
             }
 
+            // Retrieve a submission by ID
             const id = req.params.submissionId;
             const result = await Submission.findById(id).exec();
             if (result) {
@@ -185,6 +208,7 @@ export default {
     }
 };
 
+// Function to compress a video file
 async function compressVideo(filePath) {
     const outputPath = path.join(path.dirname(filePath), `compressed_${path.basename(filePath)}`);
 
